# lsp_customizations

./: LICENSE  README.md  pyproject.toml
lsp_customizations/: hooks.py  modules.txt  patches.txt
lsp_customizations/api/: company_theme.py
lsp_customizations/overrides/: switch_theme.py
lsp_customizations/patches/: add_custom_themes.py
lsp_customizations/public/css/: arp_theme.css  company_theme.css  lsp_theme.css
lsp_customizations/public/js/: company_logo.js  company_theme.js
